# k8s-experiments

./: .gitignore  README.md
000-getting-started/: README.md
001-build-web-app/: Dockerfile  README.md
001-build-web-app/app/: app.py  pyproject.toml
002-deploy-web-app/: README.md  web-app-deployment.yml  web-app-service.yml
003-secure-the-app/: README.md  caddy-sidecar-service.yml  web-app-deployment.yml
003-secure-the-app/caddy/: Caddyfile  Dockerfile
003-secure-the-app/caddy/static/: index.html
